grid solved the problem with left-align of the cards

--- a/app/components/grid-dog.module.css
+++ b/app/components/grid-dog.module.css
@@ -1,12 +1,20 @@
 .allCards {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 250px);
+  /* grid-auto-rows: 160px; */
   gap: 1rem;
+  justify-content: center;
 }
 .card {
-  background-color: white;
+  background-color: var(--white);
+  border-radius: 8px;
+  /* width: 250px; */
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+.cardContent {
   padding: 1rem;
-  border-radius: 4px;
-  width: 250px;
+}
+.imageContainer {
+  overflow: hidden;
+  border-radius: 8px 8px 0 0;
 }
