--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,6 @@
 :root {
+  --background: #dce0e4;
+  --white: #ffffff;
 }
 
 * {
@@ -11,10 +13,5 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background: -webkit-linear-gradient(
-    -67deg,
-    rgb(102, 158, 111),
-    rgb(218, 237, 220)
-  );
-  background: linear-gradient(-67deg, rgb(102, 158, 111), rgb(218, 237, 220));
+  background-color: var(--background);
 }
